--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
-sonar.projectKey=ornjiriiiis_'GeminiTest'
+sonar.projectKey=ornjiriiiis_GeminiTest
 sonar.organization=ornjiriiiis
-sonar.language=java
 sonar.java.binaries=.
-sonar.exclusions=**/*.java
-sonar.coverage.exclusions=**/*.java
+sonar.exclusions=**/test/**, **/generated/**
+sonar.coverage.exclusions=**/test/**, **/generated/**
+sonar.host.url=https://sonarcloud.io
